--- a/render.yaml
+++ b/render.yaml
@@ -1,1 +1,8 @@
-
+services:
+  - type: web
+    name: social-downloader
+    env: python
+    plan: free
+    buildCommand: "apt-get update && apt-get install -y ffmpeg && pip install -r requirements.txt"
+    startCommand: "python app.py"
+    autoDeploy: true
